--- a/ios/NewsFeeds/Info.plist
+++ b/ios/NewsFeeds/Info.plist
@@ -20,6 +20,28 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>None</string>
+			<key>CFBundleURLName</key>
+			<string></string>
+			<key>CFBundleURLSchemes</key>
+			<array/>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>newsapp</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>newsapp</string>
+			</array>
+		</dict>
+		<dict/>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -37,30 +59,30 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>fonts/FontAwesome.ttf</string>
+		<string>fonts/Ionicons.ttf</string>
+		<string>fonts/Foundation.ttf</string>
+		<string>fonts/MaterialCommunityIcons.ttf</string>
+		<string>fonts/MaterialIcons.ttf</string>
+		<string>fonts/AntDesign.ttf</string>
+		<string>fonts/Entypo.ttf</string>
+		<string>fonts/EvilIcons.ttf</string>
+		<string>fonts/Feather.ttf</string>
+		<string>fonts/Fontisto.ttf</string>
+		<string>fonts/Foundation.ttf</string>
+		<string>fonts/Ionicons.ttf</string>
+		<string>fonts/Octicons.ttf</string>
+		<string>fonts/SimpleLineIcons.ttf</string>
+		<string>fonts/Zocial.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
-		<key>UIAppFonts</key>
-    	<array>
-    		<string>fonts/FontAwesome.ttf</string>
-    		<string>fonts/Ionicons.ttf</string>
-    		<string>fonts/Foundation.ttf</string>
-    		<string>fonts/MaterialCommunityIcons.ttf</string>
-    		<string>fonts/MaterialIcons.ttf</string>
-    		<string>fonts/AntDesign.ttf</string>
-    		<string>fonts/Entypo.ttf</string>
-    		<string>fonts/EvilIcons.ttf</string>
-    		<string>fonts/Feather.ttf</string>
-    		<string>fonts/Fontisto.ttf</string>
-    		<string>fonts/Foundation.ttf</string>
-    		<string>fonts/Ionicons.ttf</string>
-    		<string>fonts/Octicons.ttf</string>
-    		<string>fonts/SimpleLineIcons.ttf</string>
-    		<string>fonts/Zocial.ttf</string>
-    	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
